Created VisJs network generation: 1. Models for RangeData of JSON,Edge and Node. 2. Logic to build data of list ofNodes and Edges from JSON. 3. Logic to generate visJs HTML file with data populated from selected range. 4. Added button to Build Network and its implementation.

--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -188,10 +188,14 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Edge.cs" />
     <Compile Include="ExcelRange.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="VisJsNetworkBuilder.cs" />
+    <Compile Include="VisJsNetworkData.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -214,6 +218,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="RangeData.cs" />
     <Compile Include="RibbonNetwork.cs">
       <SubType>Component</SubType>
     </Compile>
