--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -199,7 +199,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="VisJsDataFieldsValidator.cs" />
+    <Compile Include="VisJsDataValidator.cs" />
     <Compile Include="VisJsNetworkBuilder.cs" />
     <Compile Include="VisJsNetworkData.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
