--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -190,6 +190,11 @@
   <ItemGroup>
     <Compile Include="Helpers\DataGenerator.cs" />
     <Compile Include="Helpers\ExcelWorkbook.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SheetDataWriter\DataWriter.cs" />
     <Compile Include="SheetDataWriter\HowItWorksData.cs" />
     <Compile Include="VisJsNetwork\Models\Edge.cs" />
@@ -204,11 +209,6 @@
     <Compile Include="VisJsNetwork\Models\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Validations\SelectedRangeValidator.cs" />
     <Compile Include="Validations\VisJsDataValidator.cs" />
@@ -268,6 +268,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\how_it_works_22.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Network_Properties2.bmp" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
