--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -190,6 +190,7 @@
   <ItemGroup>
     <Compile Include="Helpers\DataGenerator.cs" />
     <Compile Include="Helpers\ExcelWorkbook.cs" />
+    <Compile Include="NetworkProperty\EdgeProperty.cs" />
     <Compile Include="NetworkProperty\NetworkProperties.cs" />
     <Compile Include="NetworkProperty\NetworkPropertiesForm.cs">
       <SubType>Form</SubType>
