Created Validation to check if selected range Count column has non integer values. 1. Created validator to return bool if list of integers as strings contains value that could not parsed as Int32. 2. Created custom exception with message about non integer value in the Count column.

--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -188,6 +188,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Exceptions\ListOfIntegersAsStringsContainsNonIntegerValuesException.cs" />
     <Compile Include="Helpers\DataGenerator.cs" />
     <Compile Include="Helpers\ExcelWorkbook.cs" />
     <Compile Include="NetworkProperty\EdgeProperty.cs" />
