Created class NetworkIntegrityLog: 1. Class constructor accepts NetworkProperties instance. 2. Created private method toCompute SHA256 from file. 3. FileName in NetworkBuilder class is substituted by Network Properties class file OutputFileName.

--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -221,6 +221,7 @@
     </Compile>
     <Compile Include="Validations\SelectedRangeValidator.cs" />
     <Compile Include="Validations\VisJsDataValidator.cs" />
+    <Compile Include="VisJsNetwork\NetworkIntegrityLog.cs" />
     <Compile Include="VisJsNetwork\VisJsNetworkBuilder.cs" />
     <Compile Include="VisJsNetwork\VisJsNetworkData.cs" />
     <Compile Include="VisJsNetwork\FromToRangeData.cs" />
