--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -191,8 +191,8 @@
     <Compile Include="Exceptions\ListOfIntegersAsStringsContainsNonIntegerValuesException.cs" />
     <Compile Include="Helpers\DataGenerator.cs" />
     <Compile Include="Helpers\ExcelWorkbook.cs" />
-    <Compile Include="NetworkProperty\EdgeProperty.cs" />
-    <Compile Include="NetworkProperty\NetworkProperties.cs" />
+    <Compile Include="VisJsNetwork\NetworkProperty\EdgeProperty.cs" />
+    <Compile Include="VisJsNetwork\NetworkProperty\NetworkProperties.cs" />
     <Compile Include="NetworkProperty\NetworkPropertiesForm.cs">
       <SubType>Form</SubType>
     </Compile>
