Create validations: 1. Path between to nodes is not found. 2. Node id by its label is not found. 3. Custom exceptions wit messages for each validation.

--- a/VisJsNetworkLibrary/VisJsNetworkLibrary.csproj
+++ b/VisJsNetworkLibrary/VisJsNetworkLibrary.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Exceptions\ExceptionMessage.cs" />
     <Compile Include="Exceptions\FromNodesEdgeNodesCountNotEqualException.cs" />
     <Compile Include="Exceptions\ListOfIntegersAsStringsContainsNonIntegerValuesException.cs" />
+    <Compile Include="Exceptions\NodeIdNotFoundException.cs" />
+    <Compile Include="Exceptions\PathNotFoundException.cs" />
     <Compile Include="Exceptions\SelectedRangeIsNullException.cs" />
     <Compile Include="Exceptions\SelectedRangeJsonColumnNamesNotCorrectException.cs" />
     <Compile Include="Exceptions\SelectedRangeJsonHasNoRecordsException.cs" />
