Create validation if graph has too many circular edges. 1. iExcelNetwrork - Implemented custom exception TooManyCircularEdgesException. 2. VisJsNetworkLibrary - Added CountCircularEdges to NetworkAnalytics class. 3. GraphAlgorithmsLibrary - implements method CountCircularEdges.

--- a/GraphAlgorithmsLibrary/GraphAlgorithmsLibrary.csproj
+++ b/GraphAlgorithmsLibrary/GraphAlgorithmsLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\CircularEdgesCounter.cs" />
     <Compile Include="Algorithms\DeepFirstSearch.cs" />
     <Compile Include="GraphDirectionalEdges.cs" />
     <Compile Include="GraphNonDirectionalEdges.cs" />
