--- a/iExcelNetwork/iExcelNetwork.csproj
+++ b/iExcelNetwork/iExcelNetwork.csproj
@@ -201,6 +201,7 @@
       <DependentUpon>FindAllPathsResultForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Exceptions\SelectedRangeJsonHasNoRecordsException.cs" />
+    <Compile Include="Exceptions\TooManyCircularEdgesException.cs" />
     <Compile Include="Helpers\DataGenerator.cs" />
     <Compile Include="Helpers\ExcelWorkbook.cs" />
     <Compile Include="NetworkProperty\NetworkPropertiesForm.cs">
@@ -224,6 +225,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Validations\GraphValidator.cs" />
     <Compile Include="Validations\SelectedRangeValidator.cs" />
     <EmbeddedResource Include="Analytics\FindAllPathsForm.resx">
       <DependentUpon>FindAllPathsForm.cs</DependentUpon>
