--- a/GraphVisualizationLibrary/GraphVisualizationLibrary.csproj
+++ b/GraphVisualizationLibrary/GraphVisualizationLibrary.csproj
@@ -66,7 +66,7 @@
     <Compile Include="NetworkProperty\NetworkProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectedRange.cs" />
-    <Compile Include="Validations\VisJsDataValidator.cs" />
+    <Compile Include="Validations\Validator.cs" />
     <Compile Include="FileProcessor.cs" />
     <Compile Include="NetworkData.cs" />
   </ItemGroup>
