--- a/ExcelAddIn/ExcelAddIn.csproj
+++ b/ExcelAddIn/ExcelAddIn.csproj
@@ -226,6 +226,12 @@
     </Compile>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VisjsNetworkLibrary\VisjsNetworkLibrary.csproj">
+      <Project>{d875affa-685e-462b-a4aa-68de101e4dd2}</Project>
+      <Name>VisjsNetworkLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
