--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -48,8 +48,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\vis-network.min.js" />
-    <Content Include="Resources\VisJsNetworkTemplate.html" />
+    <EmbeddedResource Include="Resources\vis-network.min.js" />
+    <EmbeddedResource Include="Resources\VisJsNetworkTemplate.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
