Implemented to select range in Excel sheet and convert it to data table.

--- a/ExcelAddIn/ExcelAddIn.csproj
+++ b/ExcelAddIn/ExcelAddIn.csproj
@@ -185,6 +185,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="ExcelRangeHelper.cs" />
     <Compile Include="MainRibbon.cs">
       <SubType>Component</SubType>
     </Compile>
