--- a/VisjsNetworkLibraryTests/VisjsNetworkLibraryTests.csproj
+++ b/VisjsNetworkLibraryTests/VisjsNetworkLibraryTests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\VisjsNetworkLibrary\VisjsNetworkLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
