--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -51,6 +51,7 @@
     <Compile Include="NetworkData.cs" />
     <Compile Include="NetworkHtmlContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validations\SelectedDataTableValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -59,5 +60,6 @@
     <EmbeddedResource Include="Resources\vis-network.min.js" />
     <EmbeddedResource Include="Resources\VisJsNetworkTemplate.html" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
