--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Exceptions\DataTableColumnsCountException.cs" />
     <Compile Include="Exceptions\DataTableIsEmptyException.cs" />
     <Compile Include="Exceptions\DataTableNullException.cs" />
+    <Compile Include="Exceptions\DataTableStructureException.cs" />
     <Compile Include="Exceptions\SelectedDataTableExceptionMessages.cs" />
     <Compile Include="FileProcessor.cs" />
     <Compile Include="Interfaces\INetworkData.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Models\Edge.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="NetworkData.cs" />
+    <Compile Include="NetworkDataFactory.cs" />
     <Compile Include="NetworkHtmlContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validations\SelectedDataTableValidator.cs" />
