--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\Node.cs" />
     <Compile Include="NetworkData.cs" />
     <Compile Include="NetworkDataFactory.cs" />
+    <Compile Include="NetworkDataWithCount.cs" />
     <Compile Include="NetworkHtmlContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validations\SelectedDataTableValidator.cs" />
