--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -50,25 +50,38 @@
     <Compile Include="Exceptions\DataTableStructureException.cs" />
     <Compile Include="Exceptions\SelectedDataTableExceptionMessages.cs" />
     <Compile Include="FileProcessor.cs" />
+    <Compile Include="IconMapper.cs" />
     <Compile Include="Interfaces\INetworkData.cs" />
     <Compile Include="Interfaces\IFileContent.cs" />
     <Compile Include="Models\Edge.cs" />
     <Compile Include="Models\Node.cs" />
+    <Compile Include="Models\NodeIcon.cs" />
     <Compile Include="NetworkData.cs" />
     <Compile Include="NetworkDataFactory.cs" />
     <Compile Include="NetworkDataLinkIsConfirmed.cs" />
     <Compile Include="NetworkDataWithCount.cs" />
+    <Compile Include="NetworkDataWithNodesIcons.cs" />
     <Compile Include="NetworkHtmlContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validations\SelectedDataTableValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-brands-400.ttf" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-brands-400.woff2" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-regular-400.ttf" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-regular-400.woff2" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-solid-900.ttf" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-solid-900.woff2" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-v4compatibility.ttf" />
+    <EmbeddedResource Include="Resources\FontsAwesome\webfonts\fa-v4compatibility.woff2" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\vis-network.min.js" />
     <EmbeddedResource Include="Resources\VisJsNetworkTemplate.html" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\FontsAwesome\css\all.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
