--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -50,17 +50,17 @@
     <Compile Include="Exceptions\DataTableStructureException.cs" />
     <Compile Include="Exceptions\SelectedDataTableExceptionMessages.cs" />
     <Compile Include="FileProcessor.cs" />
-    <Compile Include="IconMapper.cs" />
+    <Compile Include="Helpers\IconMapper.cs" />
     <Compile Include="Interfaces\INetworkData.cs" />
     <Compile Include="Interfaces\IFileContent.cs" />
     <Compile Include="Models\Edge.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="Models\NodeIcon.cs" />
-    <Compile Include="NetworkData.cs" />
+    <Compile Include="NetworkDataClasses\NetworkData.cs" />
     <Compile Include="NetworkDataFactory.cs" />
-    <Compile Include="NetworkDataLinkIsConfirmed.cs" />
-    <Compile Include="NetworkDataWithCount.cs" />
-    <Compile Include="NetworkDataWithNodesIcons.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataLinkIsConfirmed.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataWithCount.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataWithNodesIcons.cs" />
     <Compile Include="NetworkHtmlContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validations\SelectedDataTableValidator.cs" />
