Added DataValidation list to table tamplates.

--- a/ExcelAddIn/ExcelAddIn.csproj
+++ b/ExcelAddIn/ExcelAddIn.csproj
@@ -222,6 +222,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Validations\ExcelDataValidation.cs" />
     <Compile Include="Validations\SelectedRangeValidator.cs" />
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
