--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -57,8 +57,10 @@
     <Compile Include="Models\Edge.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="Models\NodeIcon.cs" />
+    <Compile Include="Interfaces\INetworkDataTableTemplates.cs" />
     <Compile Include="NetworkDataClasses\NetworkData.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataScalingNodesAndEdges.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataTableTemplatesWithSampleData.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataTableTemplates.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsInColor.cs" />
     <Compile Include="NetworkDataFactory.cs" />
