Created NetworkDataithCountAndLinkIsConfirmed class

--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -62,6 +62,7 @@
     <Compile Include="NetworkDataClasses\NetworkDataScalingNodesAndEdges.cs" />
     <Compile Include="Models\NetworkDataTableTemplatesWithSampleData.cs" />
     <Compile Include="Models\NetworkDataTableTemplates.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataWithCountAndLinkIsConfirmed.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsInColor.cs" />
     <Compile Include="NetworkDataFactory.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataLinkIsConfirmed.cs" />
