Created NetworkDataWithNodesIconsAndLinkIsConfirmed class.

--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\NetworkDataTableTemplatesWithSampleData.cs" />
     <Compile Include="Models\NetworkDataTableTemplates.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithCountAndLinkIsConfirmed.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsAndLinkIsConfirmed.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsInColor.cs" />
     <Compile Include="NetworkDataFactory.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataLinkIsConfirmed.cs" />
