Created class NetworkDataWithNodesIconsInColorAndLinkIsConfirmed

--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -67,6 +67,7 @@
     <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsAndLinkIsConfirmed.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsAndLinkIsConfirmedAndCount.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsInColor.cs" />
+    <Compile Include="NetworkDataClasses\NetworkDataWithNodesIconsInColorAndLinkIsConfirmed.cs" />
     <Compile Include="NetworkDataFactory.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataLinkIsConfirmed.cs" />
     <Compile Include="NetworkDataClasses\NetworkDataWithCount.cs" />
