Created IntegrityLogContent class. Produce output of NetworkHtml file sha256 and AddIn version.

--- a/ExcelAddIn/App.config
+++ b/ExcelAddIn/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="OutputFolderPath" value = "default" />
 		<add key="NetworkFileName" value = "default" />
+		<add key ="AddInVersion" value ="1.0.0"/>
 	</appSettings>
 </configuration>
